basic setup for FT Visual projects

--- a/client/index.html
+++ b/client/index.html
@@ -30,10 +30,145 @@
     <!-- endbuild -->
   </head>
   <body>
+    <div class="page-wrapper">
+      <header class="site-header">
+        <a href="//www.ft.com/">
+          <svg xmlns="http://www.w3.org/2000/svg" width="843" height="68" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 843 68">
+            <path d="M20.2 58c0 5 1.3 6 10 6v3H0v-3c6 0 8-.6 8-5.8V9.8C8 4.6 6 4 0 4V1h41.6C47 1 49 1 50.8.7L51 19h-2.4C47.2 5.7 44 4.5 31.3 4.5h-11v27h9c8.5 0 9-1.5 9.7-8.2h2.4V43H39c-.7-6.8-1.2-8-9.8-8h-9v23M59 67v-3c6 0 8-.6 8-5.8V9.8C67 4.6 65 4 59 4V1h28.3v3c-6 0-8 .6-8 5.8v48.4c0 5.2 2 5.8 8 5.8v3H59m94.7 1l-45-55.8V58c0 5.2 3.8 6 10 6v3h-24v-3c6.2 0 9.7-.8 9.7-6V7c-3-3-5-3-9.6-3V1h21l34.6 44.3V10c0-5.2-3.6-6-9.8-6V1h24v3c-6.3 0-9.8.8-9.8 6v58h-1m29.8-1h-23.8v-3c6.3 0 9.2-1 11-6.2L192.5.6h6l23 57.6c2.2 5 3 5.8 7.8 5.8v3h-27.6v-3c8.5 0 9.3-.7 7.2-5.8l-7-17.4h-21l-6 17c-2 5 1 6.2 8 6.2v3m-1-29.8h18l-9-23.6-9 23.6z"></path>
+            <defs>
+              <path id="a" d="M0 0h842.2v68H0z"></path>
+            </defs>
+            <clipPath id="b">
+              <use xlink:href="#a" overflow="visible"></use>
+            </clipPath>
+            <path d="M291 68l-44.8-55.8V58c0 5.2 3.6 6 9.8 6v3h-23.3v-3c5.7 0 9-.8 9-6V7.2c-3.2-3-5.6-3.2-11-3.2V1h22.6l34.5 44.5V10c0-5.2-3.7-6-9.8-6V1h23.8v3c-6 0-9.6.8-9.6 6v58h-1M356 1h1.5l1 19.7H356c-1.7-11.2-7.6-17-18.6-17C325.2 3.7 316 14 316 30c0 20.6 12.8 32.2 26.4 32.2 6 0 11.2-1.6 16.3-7l1.8 1.8c-4.2 6-12.5 11-23.6 11-17 0-34-12.5-34-33.4C303 14.4 318 0 337 0c8.8 0 13.5 3.8 15.8 3.8 1.3 0 2-1 3-2.8" clip-path="url(#b)"></path>
+            <path d="M366 67v-3c6 0 8-.6 8-5.8V9.8c0-5.2-2-5.7-8-5.7V1h28.2v3c-6 0-8 .6-8 5.8v48.4c0 5.2 2 5.8 8 5.8v3H366m55 0h-22.3v-3c5 0 7.5-1 9.5-6.2L429.7.6h6l23 57.6c2 5 3 5.8 7.8 5.8v3H439v-3c8.4 0 9-.7 7-5.8l-6.8-17.4h-20.6l-6 17c-2 5 1 6.2 8.3 6.2v3m-1-30h17l-9-23.6-8 23.6zm51 30v-3c6 0 8-.6 8-5.8V9.8c0-5.2-2-5.7-8-5.7V1h28v3c-6 0-8 .6-8 5.8v49c0 4.2 2 4.8 6 4.8h3c12 0 17-2 20-16.4l2 .3-2 19.4h-50M607 0l.3 19.6h-2.5C603.4 6 600 4.3 587.5 4.3h-4V58c0 5.2 2 6 10 6v3H561v-3c8.3 0 10.4-.8 10.4-6V4.5h-4c-12.6 0-16 1.7-17.4 15.8h-2.6l.3-19.6c1.8.3 3.7.5 9.3.5h40.8c5.5 0 7.5 0 9.2-.4m7.2 66.2v-3c6 0 8-.6 8-5.8V9.8c0-5.2-2-5.7-8-5.7V1h28.3v3c-6 0-8 .6-8 5.8v48.4c0 5.2 2 5.8 8 5.8v3h-28.3m113-66v3c-6 0-8.4.4-8 5.6l5 48.8c.8 5 2.7 5.6 8.6 5.6v3h-28v-3c5.7 0 7.8-.6 7.3-5.6L707 7l-21 61h-.8l-20-61-5 51.3c-.6 5.3 3 5.7 9 5.7v3h-22v-3c6 0 8-1 8.5-5.7l5-48.7c.5-5.2-2-5.5-8-5.5V1h23l14 45 15-45h22.6"></path>
+            <defs>
+              <path id="c" d="M0 0h842.2v68H0z"></path>
+            </defs>
+            <clipPath id="d">
+              <use xlink:href="#c" overflow="visible"></use>
+            </clipPath>
+            <path d="M780 42.8h-2.5c-.7-6.7-1.2-8-9.8-8h-10v24c0 4.2 2.2 4.8 5.8 4.8h5.4c12 0 16-2 20-16.4l2 .3-2 19.5h-52v-3c6 0 8-.8 8-6V10c0-5.2-2-5.7-8-5.7V1h50v16.5h-2c-1.7-11.6-4.7-13-17.7-13h-9.8v26.8h10c8.6 0 9.2-1.4 9.8-8h2.4v19.5m52 10.5c0-6-4-9-11-12.5l-10-5.5c-7.8-4.2-12.5-8.8-12.5-17C799 8 807.5 0 819.2 0c8 0 12 3.8 14 3.8 1.7 0 2.4-1 3-2.8h2l1 18.5h-2.5C835.5 10.8 829 3.8 820 3.8c-6.7 0-11.2 4-11.2 9.8 0 6.3 4.7 8.8 10 11.7l9 4.8c8.4 5 14.4 10 14.4 18 0 12-10 20-22.6 20-8.8 0-13-4-15.5-4-1 0-2 2-2 4h-2l-1.3-20h2.5c1.8 12 10.3 17 18.8 17 7 0 13-3 13-11" clip-path="url(#d)"></path>
+          </svg>
+        </a>
+      </header>
 
-    <main>
-      <h1>Edit me</h1>
-    </main>
+
+      <main>
+        <section class="intro">
+          <h1>Which of Jared Leto’s hairstyles are you?</h1>
+
+          <p class="standfirst">This is an interactive visual story in the FT. Blub blub blub. Blub blub? Bla-blah blub blub and find out.</p>
+
+          <p class="publish-date">Floptober 34, 2103</p>
+        </section>
+
+
+        <section class="core-content">
+          <!-- Add any 'core' content (for non-JS users) here -->
+        </section>
+  
+        
+        <section class="app">
+          <!-- Use JavaScript to inject 'enhanced' content here -->
+        </section>
+
+
+        <section class="closing">
+          <div class="sources-and-credits">
+            <p class="sources">
+              Sources: 
+              
+              <span class="source">FT&nbsp;Research</span>, 
+              <span class="source"><a href="http://www.acleddata.com/data/realtime-data-2015/">Armed&nbsp;Conflict Location and Event Data Project</a></span>, 
+              <span class="source"><a href="http://www.openstreetmap.org/copyright">Base&nbsp;map data: OpenStreetMap contributors</a></span>
+            </p>
+
+            <p class="credits">
+              By 
+              <span class="credit"><a href="http://search.ft.com/search?queryText=%22Callum+Locke%22">Callum&nbsp;Locke</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Caroline+Nevitt%22">Caroline&nbsp;Nevitt</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Robin+Kwong%22">Robin&nbsp;Kwong</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=Aleksandra+Wisniewska">Aleksandra&nbsp;Wisniewska</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Steve+Bernard%22">Steve&nbsp;Bernard</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Aimee+Keane%22">Aimee&nbsp;Keane</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22william+wallis%22">William&nbsp;Wallis</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22maggie+fick%22">Maggie&nbsp;Fick</a></span>, <span class="credit">Agencies</span>
+            </p>
+          </div>
+        </section>
+      </main>
+
+
+      <footer class="o-footer o-footer--theme-light" data-o-component="o-footer">
+        <nav class="o-footer__row">
+          <div class="o-footer__col o-footer__col--full-width">
+            <h3 class="o-footer__title">Sections</h3>
+            <ul class="o-footer__row o-footer__section-list">
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/">Home</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/world/uk">UK</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/world">World</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/companies">Companies</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/markets">Markets</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/global-economy">Global Economy</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/lex">Lex</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/comment">Comment</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/management">Management</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/personal-finance">Personal Finance</a></li>
+              <li class="o-footer__link o-footer__section-link o-footer__col"><a href="http://www.ft.com/life-arts">Life &amp; Arts</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="o-footer__row o-footer__link-lists">
+          <nav class="o-footer__col o-footer__link-list">
+            <h3 class="o-footer__title">Tools</h3>
+            <ul>
+
+                <li class="o-footer__link"><a href="http://portfolio.ft.com/">Portfolio</a></li>
+                <li class="o-footer__link"><a href="http://lexicon.ft.com/">Lexicon</a></li>
+                <li class="o-footer__link"><a href="http://www.ft.com/topics">Topics</a></li>
+                <li class="o-footer__link"><a href="http://markets.ft.com/alerts/keyword.asp">Alerts Hub</a></li>
+                <li class="o-footer__link"><a href="http://nbe.ft.com/nbe/profile.cfm?segid=70121">Daily Briefings</a></li>
+            </ul>
+          </nav>
+          <nav class="o-footer__col o-footer__link-list">
+            <h3 class="o-footer__title">Services</h3>
+            <ul>
+                <li class="o-footer__link"><a href="http://www.ft.com/corporate">Corporate subscriptions</a></li>
+                <li class="o-footer__link"><a href="http://www.ft.com/syndication">Syndication</a></li>
+                <li class="o-footer__link"><a href="https://www.ft-live.com/">Conferences</a></li>
+            </ul>
+          </nav>
+          <nav class="o-footer__col o-footer__link-list">
+            <h3 class="o-footer__title">Support</h3>
+            <ul>
+                <li class="o-footer__link"><a href="http://www.ft.com/help">Help</a></li>
+                <li class="o-footer__link"><a href="http://www.ft.com/aboutus">About us</a></li>
+                <li class="o-footer__link"><a href="http://aboutus.ft.com/careers/">Jobs</a></li>
+                <li class="o-footer__link"><a href="http://aboutus.ft.com/contact-us">Contact us</a></li>
+            </ul>
+          </nav>
+          <nav class="o-footer__col o-footer__link-list">
+            <h3 class="o-footer__title">Legal &amp; Advertising</h3>
+            <ul>
+                <li class="o-footer__link"><a href="http://www.ft.com/advertising">Advertise with the FT</a></li>
+                <li class="o-footer__link"><a href="http://www.ft.com/servicestools/help/terms">Terms &amp; conditions</a></li>
+                <li class="o-footer__link"><a href="http://www.ft.com/servicestools/help/privacy">Cookie &amp; privacy policy</a></li>
+                <li class="o-footer__link"><a href="http://www.ft.com/servicestools/help/copyright">Copyright</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="o-footer__row o-footer__copyright">
+          <div class="o-footer__col o-footer__col--full-width">
+            <span>&#xA9; THE FINANCIAL TIMES LTD 2015.</span>
+            <span><abbr title="Financial Times">FT</abbr> and &#x2018;Financial Times&#x2019; are trademarks of The Financial Times Ltd.</span>
+          </div>
+        </div>
+        <div class="o-footer__pearson">
+          <div class="o-footer__row">
+            <div class="o-footer__col o-footer__col--full-width">
+              <div class="o-footer__pearson-tagline" aria-label="Always Learning"></div>
+              <div class="o-footer__pearson-logo" aria-label="Pearson"></div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.bundle.js"></script>
