--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <div class="page-wrapper">
+    <div class="page-wrapper"><div class="page-wrapper-2">
       <header class="site-header">
         <a href="//www.ft.com/">
           <svg xmlns="http://www.w3.org/2000/svg" width="843" height="68" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 843 68">
@@ -57,11 +57,11 @@
 
       <main>
         <section class="intro">
-          <h1>Which of Jared Leto’s hairstyles are you?</h1>
+          <h1>What happened in the 1975 EU referendum?</h1>
 
-          <p class="standfirst">This is an interactive visual story in the FT. Blub blub blub. Blub blub? Bla-blah blub blub and find out.</p>
+          <p class="standfirst">How the FT reported on the referendum 40 years ago.</p>
 
-          <p class="publish-date">Floptober 34, 2103</p>
+          <p class="publish-date">September 5, 2015</p>
         </section>
 
 
@@ -167,11 +167,13 @@
           </div>
         </div>
       </footer>
-    </div>
+    </div></div>
 
+    <script src="http://bertha.ig.ft.com/view/publish/js/1lRXhTum3BwbIcLn5BJeMpX5MHYH--cmR6wsE4tGrS8U/basic,stories,content?d=spreadsheet"></script>
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.bundle.js"></script>
+    <script src="bower_components/plain-jsx/index.js"></script>
     <!-- endbuild -->
   </body>
 </html>
