--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
     <!-- endbuild -->
     <!-- endsmoosh -->
 
-    <!-- build:css styles/main.css -->
+    <!-- build:css styles/main.5.css -->
     <link rel="stylesheet" href="bower_components/normalize.css/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -57,11 +57,14 @@
 
       <main>
         <section class="intro">
-          <h1>What happened in the 1975 EU referendum?</h1>
+          <h1 class="headline"></h1>
 
-          <p class="standfirst">How the FT reported on the referendum 40 years ago.</p>
+          <p class="standfirst"></p>
 
-          <p class="publish-date">September 5, 2015</p>
+          <p>
+            <span class="byline"></span>
+            <span class="updated">UPDATED </span><span class="publish-date"></span>
+          </p>
         </section>
 
 
@@ -75,7 +78,7 @@
         </section>
 
 
-        <section class="closing">
+        <!-- <section class="closing">
           <div class="sources-and-credits">
             <p class="sources">
               Sources: 
@@ -90,7 +93,7 @@
               <span class="credit"><a href="http://search.ft.com/search?queryText=%22Callum+Locke%22">Callum&nbsp;Locke</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Caroline+Nevitt%22">Caroline&nbsp;Nevitt</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Robin+Kwong%22">Robin&nbsp;Kwong</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=Aleksandra+Wisniewska">Aleksandra&nbsp;Wisniewska</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Steve+Bernard%22">Steve&nbsp;Bernard</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22Aimee+Keane%22">Aimee&nbsp;Keane</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22william+wallis%22">William&nbsp;Wallis</a></span>, <span class="credit"><a href="http://search.ft.com/search?queryText=%22maggie+fick%22">Maggie&nbsp;Fick</a></span>, <span class="credit">Agencies</span>
             </p>
           </div>
-        </section>
+        </section> -->
       </main>
 
 
@@ -171,7 +174,7 @@
 
     <script src="http://bertha.ig.ft.com/view/publish/js/1lRXhTum3BwbIcLn5BJeMpX5MHYH--cmR6wsE4tGrS8U/basic,stories,content?d=spreadsheet"></script>
 
-    <!-- build:js scripts/main.js -->
+    <!-- build:js scripts/main.5.js -->
     <script src="scripts/main.bundle.js"></script>
     <script src="bower_components/plain-jsx/index.js"></script>
     <!-- endbuild -->
